--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.9",
-    "@angular/cdk": "^10.1.3",
-    "@angular/common": "~10.0.9",
-    "@angular/compiler": "~10.0.9",
-    "@angular/core": "~10.0.9",
-    "@angular/forms": "~10.0.9",
-    "@angular/material": "^10.1.3",
-    "@angular/platform-browser": "~10.0.9",
-    "@angular/platform-browser-dynamic": "~10.0.9",
-    "@angular/router": "~10.0.9",
-    "moment": "^2.24.0",
-    "ngx-cookie-service": "^3.0.3",
-    "ngx-device-detector": "^1.4.1",
-    "rxjs": "~6.5.4",
+    "@angular/animations": "^10.1.4",
+    "@angular/cdk": "^10.2.3",
+    "@angular/common": "^10.0.14",
+    "@angular/compiler": "^10.0.14",
+    "@angular/core": "^10.0.14",
+    "@angular/forms": "^10.0.14",
+    "@angular/material": "^10.2.3",
+    "@angular/platform-browser": "^10.0.14",
+    "@angular/platform-browser-dynamic": "^10.0.14",
+    "@angular/router": "^10.0.14",
+    "moment": "^2.29.0",
+    "ngx-cookie-service": "^3.1.3",
+    "ngx-device-detector": "^1.5.2",
+    "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.9",
-    "@angular/language-service": "~10.0.9",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular/cli": "^10.0.8",
+    "@angular/compiler-cli": "^10.0.14",
+    "@angular/language-service": "^10.0.14",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.62",
     "ts-node": "~8.3.0",
     "typescript": "~3.9.7"
   }
