--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --aot=false --disableHostCheck=true --port=4300",
     "build-dev": "ng build",
     "build-staging": "ng build --aot --configuration=staging",
-    "build": "ng build --prod",
+    "build": "ng build --prod --aot",
     "lint": "ng lint",
     "postinstall": "ngcc --tsconfig ./src/tsconfig.app.json"
   },
