--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.4",
+    "@angular/animations": "^11.1.0",
     "@angular/cdk": "^10.2.3",
-    "@angular/common": "^10.0.14",
-    "@angular/compiler": "^10.0.14",
-    "@angular/core": "^10.0.14",
-    "@angular/forms": "^10.0.14",
+    "@angular/common": "^11.1.0",
+    "@angular/compiler": "^11.1.0",
+    "@angular/core": "^11.1.0",
+    "@angular/forms": "^11.1.0",
     "@angular/material": "^10.2.3",
-    "@angular/platform-browser": "^10.0.14",
-    "@angular/platform-browser-dynamic": "^10.0.14",
-    "@angular/router": "^10.0.14",
+    "@angular/platform-browser": "^11.1.0",
+    "@angular/platform-browser-dynamic": "^11.1.0",
+    "@angular/router": "^11.1.0",
     "moment": "^2.29.0",
     "ngx-cookie-service": "^11.0.2",
     "ngx-device-detector": "^1.5.2",
@@ -30,14 +30,14 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular/cli": "^10.0.8",
-    "@angular/compiler-cli": "^10.0.14",
-    "@angular/language-service": "^10.0.14",
-    "@types/jasmine": "^3.5.14",
+    "@angular-devkit/build-angular": "^0.1101.1",
+    "@angular/cli": "^11.1.1",
+    "@angular/compiler-cli": "^11.1.0",
+    "@angular/language-service": "^11.1.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.62",
     "ts-node": "~8.3.0",
-    "typescript": "~3.9.7"
+    "typescript": "~4.1.3"
   }
 }
