--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.3",
-    "@angular/cdk": "^11.2.2",
-    "@angular/common": "^11.2.3",
-    "@angular/compiler": "^11.2.3",
-    "@angular/core": "^11.2.3",
-    "@angular/forms": "^11.2.3",
-    "@angular/material": "^11.2.2",
-    "@angular/platform-browser": "^11.2.3",
-    "@angular/platform-browser-dynamic": "^11.2.3",
-    "@angular/router": "^11.2.3",
-    "moment": "^2.29.0",
+    "@angular/animations": "^11.2.7",
+    "@angular/cdk": "^11.2.6",
+    "@angular/common": "^11.2.7",
+    "@angular/compiler": "^11.2.7",
+    "@angular/core": "^11.2.7",
+    "@angular/forms": "^11.2.7",
+    "@angular/material": "^11.2.6",
+    "@angular/platform-browser": "^11.2.7",
+    "@angular/platform-browser-dynamic": "^11.2.7",
+    "@angular/router": "^11.2.7",
+    "moment": "^2.29.1",
     "ngx-cookie-service": "^11.0.2",
-    "ngx-device-detector": "^2.0.5",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
+    "ngx-device-detector": "^2.0.6",
+    "rxjs": "^6.6.6",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.2",
-    "@angular/cli": "^11.2.2",
-    "@angular/compiler-cli": "^11.2.3",
-    "@angular/language-service": "^11.2.3",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "^0.1102.6",
+    "@angular/cli": "^11.2.6",
+    "@angular/compiler-cli": "^11.2.7",
+    "@angular/language-service": "^11.2.7",
+    "@types/jasmine": "^3.6.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.62",
+    "@types/node": "^12.20.6",
     "ts-node": "~8.3.0",
-    "typescript": "~4.1.3"
+    "typescript": "^4.1.5"
   }
 }
