--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sensateiot-login",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --disableHostCheck=true --port=4300",
@@ -38,6 +38,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.20.10",
     "ts-node": "~8.3.0",
-    "typescript": "^4.2.4"
+    "typescript": "4.1.5"
   }
 }
