--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^12.0.1",
     "moment": "^2.29.1",
     "ngx-cookie-service": "^11.0.2",
-    "ngx-device-detector": "^2.0.7",
+    "ngx-device-detector": "^2.0.10",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -34,9 +34,9 @@
     "@angular/cli": "^12.0.1",
     "@angular/compiler-cli": "^12.0.1",
     "@angular/language-service": "^12.0.1",
-    "@types/jasmine": "^3.6.9",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.20.10",
+    "@types/jasmine": "^3.7.4",
+    "@types/jasminewd2": "^2.0.9",
+    "@types/node": "^12.20.13",
     "ts-node": "~8.3.0",
     "typescript": "4.2.4"
   }
