--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "sensateiot-login",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --disableHostCheck=true --port=4300",
     "build-dev": "ng build",
     "build-staging": "ng build --aot --configuration=staging",
-    "build": "ng build --prod --aot",
+    "build": "ng build --configuration production --aot",
     "lint": "ng lint",
     "postinstall": "ngcc --tsconfig ./src/tsconfig.app.json"
   },
